--- a/美团项目/css/index2.css
+++ b/美团项目/css/index2.css
@@ -7,6 +7,19 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+.header-title{
+  /* height: 70px;
+  width: 100%;
+  align-items: center;
+  position: fixed;
+  box-shadow: 0 3px 10px 0 rgba(0,0,0,0.06);
+  background-color: #FFFFFF;
+  opacity: 1;
+  top: 0;
+  z-index: 99999999;
+  overflow: hidden;
+  background-color: rgba(0,0,0,0.5); */
+}
 /* 头部左边111*/
 .header-left {
   float: left;
@@ -31,6 +44,7 @@
   float: left;
   width: 100%;
   text-align: center;
+  margin-top: 15px;
 }
 .header-right li {
   float: left;
@@ -60,7 +74,7 @@
   height: 170px;
   position: absolute;
   left: 50%;
-  top: -255px;
+  top: -325px;
   transform: translateX(-50%);
   z-index: 999;
   display: flex;
@@ -189,6 +203,7 @@
   height: 900px;
   margin-top: -30px;
 }
+/* 优秀合作案例标题 */
 .teamwork-title {
   width: 309px;
   height: 135px;
@@ -199,6 +214,7 @@
   height: 135px;
   margin-top: 95px;
 }
+/* 优秀合作案例背景图 */
 .teamwork-photo {
   width: 758px;
   height: 420px;
@@ -207,6 +223,7 @@
   right: 76px;
   top: 290px;
 }
+/* 优秀合作案例左边 */
 .teamwork-left {
   float: left;
   width: 653px;
@@ -236,6 +253,16 @@
   letter-spacing: -0.3px;
   line-height: 28px;
 }
+.teamwork-left a img:nth-child(1){
+  position: absolute;
+  left: -75px;
+  top: 123px;
+}
+.teamwork-left a img:nth-child(2){
+  position: absolute;
+  right: -382px;
+  top: 123px;
+}
 .chakan{
   float: left;
     width: 86px;
@@ -252,6 +279,7 @@
   background-color: rgb(255, 205, 87);
   color: white;
 }
+/* 优秀合作案例右边 */
 .teamwork-right{
   position: absolute;
   right: 0px;
@@ -259,4 +287,208 @@
 }
 .teamwork-right img{
   width: 305px;
+}
+.radius{
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 777px;
+}
+.radius li{
+  float: left;
+  margin-right: 14px;
+  width: 12px;
+  height: 12px;
+  background: #FFF;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.radius li:nth-child(1){
+  background-color: rgb(255,92,73);
+}
+/* 媒体新闻报道 */
+.news{
+  position: relative;
+  width: 100%;
+  height: 900px;
+}
+/* 媒体新闻报道标题 */
+.news-title{
+  position: absolute;
+  left: 50%;
+  top: 100px;
+  transform: translateX(-50%);
+  width:296px ;
+  height: 127px;
+
+}
+.news-title img{
+  width: 296px;
+  height: 127px;
+}
+/* 媒体新闻报道左边 */
+.news-left{
+  position: absolute;
+  top: 330px;
+  width: 415px;
+  height: 546px;
+}
+/* 媒体新闻背景图 */
+.news-photo{
+  position: absolute;
+  top: 35px;
+  right: 15px;
+  width: 368px;
+  height: 500px;
+  border-radius: 5px;
+  background-color:rgb(254,190,47) ;
+}
+/* 媒体新闻内容 */
+.news-content{
+  position: absolute;
+  width: 368px;
+  height: 500px;
+  border-radius: 5px;
+  background-color: #fff;
+  margin-left: 10px;
+  box-shadow: 0 0 18px 0 rgba(0,0,0,0.08);
+}
+.news-content img{
+  width: 368px;
+  height: 215px;
+}
+.news-content h2{
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  font-size: 25px;
+  box-sizing: border-box;
+  padding: 10px 20px;
+}
+.news p{
+  margin-top: 18px;
+  height: 84px;
+  overflow: hidden;
+  font-size: 16px;
+  color: #888;
+  padding-left: 25px;
+  box-sizing: border-box;
+  line-height: 28px;
+  display: -webkit-box;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+}
+/* 媒体新闻右边 */
+.news-right{
+  position: absolute;
+  top: 325px;
+  right:0px;
+  width: 510px;
+  height: 407px;
+}
+.news-right h3{
+  font-size: 30px;
+  color: #000000;
+  margin-bottom: 36px;
+  font-weight: 400;
+}
+.news-right a{
+  display: block;
+  height: 50px;
+  line-height: 50px;
+  width: 715px;
+  color: #333;
+  font-size: 16px;
+}
+.news-right img{
+  vertical-align: middle;
+  width: 27px;
+  height: 23px;
+  margin-right: 5px;
+}
+.news-right a:nth-last-child(1){
+margin-top: 20px;
+}
+.news-right a:hover{
+  font-size: 20px;
+  font-weight: 600;
+  transition: all 0.5s;
+}
+.news-right a:nth-last-child(1):hover{
+  color: rgb(254,190,47);
+}
+/* 底部 */
+footer{
+  width: 100%;
+  height: 358px;
+  background-color:rgb(51,51,51) ;
+}
+.footer-left{
+width: 173px;
+height: 128px;
+}
+ul{
+  width: 56px;
+  height: 128px;
+  float: left;
+ margin-top: 75px;
+}
+.part2{
+  margin-left: 60px;
+
+}
+li{
+  float: left;
+  color: rgb(170,170,170);
+  height: 40px;
+  line-height: 40px;
+  font-size: 14px;
+}
+/* 中间 */
+.footer-content{
+  width: 220px;
+  height: 157px;
+  margin-left: 500px;
+  margin-top: -90px;
+}
+.footer-content h3{
+  font-size: 25px;
+  color: rgb(238,238,238);
+  margin-top: 40px;
+  margin-bottom: 12px;
+  font-weight: normal;
+}
+.footer-content p{
+  color: rgb(163,154,140);
+}
+/* 底部右边 */
+.footer-right{
+  width: 225px;
+  height: 140px;
+  margin-top: -150px;
+  margin-left: 760px;
+}
+.footer-right img{
+  width: 90px;
+  height: 90px;
+  margin-right: 15px;
+  margin-top: 25px;
+}
+.footer-right h3{
+  color: rgb(238,238,238);
+  font-size: 22px;
+  font-weight: normal;
+}
+footer p:nth-last-child(1){
+  margin-top: 65px;
+  text-align: center;
+  color: #999;
+}
+footer p img{
+  width: 18px;
+  height: 18px;
+  vertical-align: middle;
 }
