--- a/com.meituan.www/css/business.css
+++ b/com.meituan.www/css/business.css
@@ -51,16 +51,24 @@ header img {
   line-height: 17px;
 }
 .content a{
+  position: relative;
     display: inline-block;
-    background-image: url("../image/jinglingtu1.png");
-    background-position: 0 0;
-    background-size: 80px 80px;
-    background-repeat: no-repeat;
     width: 152px;
     height: 152px;
+ 
     border-radius: 50%;
     background-color: white;
 }
+.content a img{
+  position: absolute;
+  top: 25%;
+  left: 23%;
+  transform: translate(-50% -505);
+  width:80px ;
+  height: 80px;
+  /* margin-top: 20px; */
+}
+
 footer{
     width: 100%;
     height: 100px;
